[tool.poetry]
name = "gpt-cfa"
version = "0.1.0"
description = ""
authors = ["antonypapadimitriou <antony.papadimitriou@icloud.com>"]
readme = "README.md"
packages = [{include = "gpt_cfa"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.3"
scipy = "^1.11.1"
tenacity = "^8.2.2"
termcolor = "^2.3.0"
openai = "^0.27.8"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
